--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
       html {
       }
       canvas {
+	  width: 100%;
+	  height: 100%;
       }
       body{ height: 100vh; margin:0; }
 
-      header{ height:200px; overflow-y: hidden; }
-      footer{ height: 300px; overflow-y: hidden; }
+      header{ height: 20vh;  }
+      footer{ height: 30vh; }
 
       body{
 	  justify-content: center;
@@ -26,7 +28,13 @@
       }
 
       footer{
+	  flex-shrink: 0;
 	  margin-top:auto;
+      }
+
+      footer{
+	  flex-shrink: 0;
+	  margin-bottom:auto;
       }
 
       .container {
@@ -41,36 +49,64 @@
 	  -webkit-text-size-adjust: 100%;
       }
       div#keyboard {
+	  font-size: 3vh;
+	  width: 100%;
+	  height: 100%;
 	  display: flex;
 	  flex-direction:column;
 	  justify-content: center;
 	  align-items: center;
+      }
+      h1 {
+	  font-size: 4vh;
+      }
+      h2 {
+	  font-size: 3vh;
+      }
+      div#headerThing {
+	  width: 100%;
 	  height: 100%;
+	  display: flex;
+	  flex-direction:column;
+	  justify-content: center;
+	  align-items: center;
       }
       span {
-	  width:35px;
-	  height:50px;
+	  padding: 8px;
+	  width:3vh;
+	  height:5vh;
 	  background:lightgrey;
-	  border-radius: 0.5em;
-	  margin: 3px;
+	  border-radius: 2vh;
+	  border-width: 1vh;
+	  margin: 0.2vh;
 	  text-align: center;
 	  display: inline-flex;
 	  align-items: center;
 	  justify-content: center;
       }
       main {
+	  flex: auto;
+	  width: 100%;
+	  height: 100%;
+      }
+      div#headerThing {
+	  width: 100%;
 	  height: 100%;
       }
   </style>
 </head>
   <body>
-    <header><h1>FERDLE</h1><h2>Fire Emblem Wordle!</h2></header>
+    <header id="header">
+      <div id="headerThing">
+	<h2>FERDLE - Fire Emblem Wordle!</h2>
+      </div>
+    </header>
     <main>
 	<div id="canvasDiv">
-	  <canvas id="mainCanvas" width="800px" height="400px">Your browser is too outdated to play Ferdle, please update at your earliest convenience.</canvas>
+	  <canvas id="mainCanvas">Your browser is too outdated to play Ferdle, please update at your earliest convenience.</canvas>
 	</div>
     </main>
-    <footer>
+    <footer id="footer">
       <div id="keyboard">
 	<div id="row1">
 	  <span class="key" id="Q">Q</span>
