--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="title" content="Ferdle - Fire Emblem Wordle!">
     <meta name="description" content="Wordle, but with a Fire Emblem twist!">
     <meta name="keywords" content="fire emblem, wordle, logic game, game">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
@@ -12,6 +13,10 @@
       html {
       }
       canvas {
+	  width: 100%;
+	  height: 100%;
+      }
+      #canvasDiv {
 	  width: 100%;
 	  height: 100%;
       }
@@ -33,6 +38,7 @@
       }
 
       footer{
+	  width: 100%;
 	  flex-shrink: 0;
 	  margin-bottom:auto;
       }
@@ -47,6 +53,13 @@
       html {
 	  font-family: sans-serif;
 	  -webkit-text-size-adjust: 100%;
+      }
+      div.keyboardRow {
+	  width: 100%;
+	  height: 100%;
+	  display: flex;
+	  justify-content: center;
+	  align-items: center;
       }
       div#keyboard {
 	  font-size: 3vh;
@@ -73,7 +86,7 @@
       }
       span {
 	  padding: 8px;
-	  width:3vh;
+	  width:5%;
 	  height:5vh;
 	  background:lightgrey;
 	  border-radius: 2vh;
@@ -108,7 +121,7 @@
     </main>
     <footer id="footer">
       <div id="keyboard">
-	<div id="row1">
+	<div class="keyboardRow" id="row1">
 	  <span class="key" id="Q">Q</span>
 	  <span class="key" id="W">W</span>
 	  <span class="key" id="E">E</span>
@@ -120,7 +133,7 @@
 	  <span class="key" id="O">O</span>
 	  <span class="key" id="P">P</span>
 	</div>
-	<div id="row2">
+	<div class="keyboardRow" id="row2">
 	  <span class="key" id="A">A</span>
 	  <span class="key" id="S">S</span>
 	  <span class="key" id="D">D</span>
@@ -131,7 +144,7 @@
 	  <span class="key" id="K">K</span>
 	  <span class="key" id="L">L</span>
 	</div>
-	<div id="row3">
+	<div class="keyboardRow" id="row3">
 	  <span class="key" id="delete">⌫</span>
 	  <span class="key" id="Z">Z</span>
 	  <span class="key" id="X">X</span>
