--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
       }
       body{ height: 100vh; margin:0; }
 
-      header{ height: 20vh;  }
-      footer{ height: 30vh; }
+      header{ height: 10%;  }
+      main { height: 60%; }
+      footer{ height: 30%; }
 
       body{
 	  justify-content: center;
@@ -32,15 +33,27 @@
 	  flex-direction:column;
       }
 
+      header{
+	  display: flex;
+	  justify-content: center;
+	  align-items: center;
+	  align-content: center;
+	  flex-shrink: 0;
+	  margin-bottom:auto;
+      }
+
       footer{
 	  flex-shrink: 0;
 	  margin-top:auto;
       }
 
       footer{
+	  display: flex;
 	  width: 100%;
 	  flex-shrink: 0;
 	  margin-bottom:auto;
+	  justify-content: center;
+	  align-items: center;
       }
 
       .container {
@@ -62,8 +75,8 @@
 	  align-items: center;
       }
       div#keyboard {
-	  font-size: 3vh;
-	  width: 100%;
+	  font-size: 1.5em;
+	  width: 90%;
 	  height: 100%;
 	  display: flex;
 	  flex-direction:column;
@@ -71,10 +84,11 @@
 	  align-items: center;
       }
       h1 {
-	  font-size: 4vh;
+	  font-size: 2em;
       }
       h2 {
-	  font-size: 3vh;
+	  font-size: 2em;
+	  text-align: center;
       }
       div#headerThing {
 	  width: 100%;
@@ -85,13 +99,13 @@
 	  align-items: center;
       }
       span {
-	  padding: 8px;
-	  width:5%;
-	  height:5vh;
+	  padding: 0.2em;
+	  width:32%;
+	  height:50%;
 	  background:lightgrey;
-	  border-radius: 2vh;
-	  border-width: 1vh;
-	  margin: 0.2vh;
+	  border-radius: 0.5em;
+	  border-width: 0.5em;
+	  margin: 2px;
 	  text-align: center;
 	  display: inline-flex;
 	  align-items: center;
@@ -100,7 +114,6 @@
       main {
 	  flex: auto;
 	  width: 100%;
-	  height: 100%;
       }
       div#headerThing {
 	  width: 100%;
@@ -111,7 +124,7 @@
   <body>
     <header id="header">
       <div id="headerThing">
-	<h2>FERDLE - Fire Emblem Wordle!</h2>
+	<h2>FERDLE<br/>Fire Emblem Wordle!</h2>
       </div>
     </header>
     <main>
