--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 	  width: 100%;
 	  height: 100%;
       }
-      body{ height: 100vh; margin:0; }
+      body {
+	  height: 100vh;
+	  height: calc(var(--vh, 1vh) * 100);
+      }
 
       header{ height: 10%;  }
       main { height: 60%; }
