--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Ferdle - Fire Emblem Wordle!</title>
     <style>
       html {
+	  width: 100%;
+	  height: calc(var(--vh, 1vh) * 100);
       }
       canvas {
 	  width: 100%;
@@ -21,8 +23,8 @@
 	  height: 100%;
       }
       body {
-	  height: 100vh;
-	  height: calc(var(--vh, 1vh) * 100);
+	  height: 100%;
+	  min-height: -webkit-fill-available;
       }
 
       header{ height: 10%;  }
