--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
       html {
 	  width: 100%;
-	  height: calc(var(--vh, 1vh) * 100);
+	  height: 100%;
       }
       canvas {
 	  width: 100%;
@@ -81,7 +81,7 @@
       }
       div#keyboard {
 	  font-size: 1.5em;
-	  width: 90%;
+	  width: 500px;
 	  height: 100%;
 	  display: flex;
 	  flex-direction:column;
