Project rename, attempt to reduce to 100% viewport only

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="title" content="Ferdle - Fire Emblem Wordle!">
+    <meta name="title" content="Sol Katti">
     <meta name="description" content="Wordle, but with a Fire Emblem twist!">
     <meta name="keywords" content="fire emblem, wordle, logic game, game">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <title>Ferdle - Fire Emblem Wordle!</title>
+    <title>Sol Katti - Fire Emblem Wordle!</title>
     <style>
       html {
 	  width: 100%;
@@ -22,16 +22,17 @@
 	  width: 100%;
 	  height: 100%;
       }
-      body {
+      body{
 	  height: 100%;
 	  min-height: -webkit-fill-available;
       }
 
-      header{ height: 10%;  }
-      main { height: 60%; }
-      footer{ height: 30%; }
+      header{ height: 5%;  }
+      main { height: 6%; }
+      footer{ height: 35%; }
 
       body{
+	  margin: 0;
 	  justify-content: center;
 	  align-items: center;
 	  display:flex;
@@ -80,6 +81,8 @@
 	  align-items: center;
       }
       div#keyboard {
+	  margin-left: 10px;
+	  margin-right: 10px;
 	  font-size: 1.5em;
 	  width: 500px;
 	  height: 100%;
@@ -129,7 +132,7 @@
   <body>
     <header id="header">
       <div id="headerThing">
-	<h2>FERDLE<br/>Fire Emblem Wordle!</h2>
+	<h2>SOL KATTI</h2>
       </div>
     </header>
     <main>
