Fix links in pop-up

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 	<p>A hint - SOL KATTI features a huge number of weapon, character, location, and item names, among other miscellaneous terms. Plurals are limited but present for things like weapons or items, but not for characters.</P>
 	<p>One new SOL KATTI will appear every day for... a while. If you enter a word that isn't accepted, and you think it should have been, contact me!</p>
 	<br/>
-	<p>Created by <a href="https://twitter.com/WhoIsDoopu">Doopu</a>, to annoy <a href="https://www.twitch.tv/dnkabs">Kabs</a>.</p>
+	<p>Created by <a href="https://twitter.com/WhoIsDoopu" target="_blank">Doopu</a>, to annoy <a href="https://www.twitch.tv/dnkabs" target="_blank">Kabs</a>.</p>
       </div>
 
     </div>
