--- a/index.html
+++ b/index.html
@@ -316,6 +316,6 @@
     </div>
 
     <div id="snackbar">Result copied to clipboard!</div>
-    <script src="index.js"></script>
+    <script src="index.min.js"></script>
   </body>
 </html>
