--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 	  width: 100%;
 	  height: 100%;
       }
+      #answer {
+	  display: none;
+	  font-size: 1.5em;
+	  text-align: center;
+      }
       #canvasDiv {
 	  width: 100%;
 	  height: 100%;
@@ -260,6 +265,8 @@
 	</div>
     </main>
     <footer id="footer">
+      <div id="answer">
+      </div>
       <div id="keyboard">
 	<div class="keyboardRow" id="row1">
 	  <span class="key" id="Q">Q</span>
