--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="title" content="Sol Katti">
+    <meta name="title" content="SOL KATTI">
     <meta name="description" content="Wordle, but with a Fire Emblem twist!">
     <meta name="keywords" content="fire emblem, wordle, logic game, game">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <title>Sol Katti - Fire Emblem Wordle!</title>
+    <title>SOL KATTI - Fire Emblem Wordle!</title>
     <style>
       html {
 	  width: 100%;
